--- a/wordpress/wp-content/themes/architecture/scss/pages/blog/_blogitems.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/blog/_blogitems.scss
@@ -25,7 +25,7 @@
 
             img {
               width: 100%;
-              height: 100%;
+              height: 350px;
               transition: .5s ease;
 
               &:hover {
