--- a/wordpress/wp-content/themes/architecture/scss/pages/blog/_heroblog.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/blog/_heroblog.scss
@@ -12,12 +12,43 @@
       h3 {
         color: $headingColor;
         text-align: center;
+
+        @include breakpoint(mobile) {
+          font-size: 4vw;
+        }
+
+        @include breakpoint(tablet) {
+          font-size: 2.5vw;
+        }
+
+        @include breakpoint(laptop) {
+          font-size: 2vw;
+        }
+
+        @include breakpoint(desktop) {
+          font-size: 1.2vw;
+        }
       }
 
       h1 {
         color: $headingColor;
-        font-size: 40px;
         text-align: center;
+
+        @include breakpoint(mobile) {
+          font-size: 7vw;
+        }
+
+        @include breakpoint(tablet) {
+          font-size: 4.5vw;
+        }
+
+        @include breakpoint(laptop) {
+          font-size: 3.5vw;
+        }
+
+        @include breakpoint(desktop) {
+          font-size: 2.5vw;
+        }
       }
     }
   }
