--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -238,6 +238,9 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
 }
 
 @media screen and (min-width: 320px) {
@@ -246,9 +249,6 @@ a {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
 }
 
@@ -266,10 +266,29 @@ a {
   color: #7e7d7d;
 }
 
+@media screen and (min-width: 320px) {
+  .site-footer .bottom-content .copy-right p {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-footer .bottom-content .copy-right p {
+    text-align: left;
+  }
+}
+
 .site-footer .bottom-content .social-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media screen and (min-width: 320px) {
+  .site-footer .bottom-content .social-link {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
 }
 
 .site-footer .bottom-content .social-link a {
