Modifed global position in hero section

--- a/wordpress/wp-content/themes/architecture/scss/pages/blog/_heroblog.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/blog/_heroblog.scss
@@ -5,9 +5,10 @@
   background-image: url('./assets/blog.jpg');
 
   .blog-hero-wrapper {
+    height: 100%;
 
     .blog-title {
-      padding: 15rem 0;
+
 
       h3 {
         color: $headingColor;
