--- a/wordpress/wp-content/themes/architecture/scss/pages/single-blog/_single-hero.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/single-blog/_single-hero.scss
@@ -5,18 +5,32 @@
   height: 100vh;
 
   .single-blog-wrapper {
-    display: flex;
-    justify-content: center;
-    align-content: center;
+    height: 100%;
 
     .single-blog-title {
-      padding-top: 25rem;
 
       h1 {
-        font-size: 70px;
         color: $headingColor;
         text-align: center;
         display: inline-block;
+        text-shadow: 1px 1px 10px #000000;
+
+
+        @include breakpoint(mobile) {
+          font-size: 7vw;
+        }
+
+        @include breakpoint(tablet) {
+          font-size: 4.5vw;
+        }
+
+        @include breakpoint(laptop) {
+          font-size: 3.5vw;
+        }
+
+        @include breakpoint(desktop) {
+          font-size: 2.5vw;
+        }
       }
     }
   }
